--- a/config.json
+++ b/config.json
@@ -1,1 +1,5 @@
-{"ip":"NightmareNetwork07.aternos.me","name":"24/7 Server online","port":"39865"}
+{
+	"ip":"Testing09.aternos.me",
+	"port": "25565",
+	"name": "afkbot"
+}
