--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Testing09.aternos.me",
-	"port": "25565",
+	"ip":"NightmareNetwork07.aternos.me",
+	"port": "39865",
 	"name": "afkbot"
 }
